my-cluster-backup/validatingwebhookconfiguration-nginx-ingress-ingress-nginx-admission.yaml
apiVersion: admissionregistration.k8s.io/v1beta1
kind: ValidatingWebhookConfiguration
metadata:
  annotations:
    meta.helm.sh/release-name: nginx-ingress
    meta.helm.sh/release-namespace: ingress-basic
  creationTimestamp: "2021-03-10T07:06:19Z"
  labels:
    app.kubernetes.io/component: admission-webhook
    app.kubernetes.io/instance: nginx-ingress
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/version: 0.44.0
    helm.sh/chart: ingress-nginx-3.24.0
  managedFields:
  - apiVersion: admissionregistration.k8s.io/v1
    fieldsType: FieldsV1
    fieldsV1:
      f:metadata:
        f:annotations:
          .: {}
          f:meta.helm.sh/release-name: {}
          f:meta.helm.sh/release-namespace: {}
        f:labels:
          .: {}
          f:app.kubernetes.io/component: {}
          f:app.kubernetes.io/instance: {}
          f:app.kubernetes.io/managed-by: {}
          f:app.kubernetes.io/name: {}
          f:app.kubernetes.io/version: {}
          f:helm.sh/chart: {}
      f:webhooks:
        .: {}
        k:{"name":"validate.nginx.ingress.kubernetes.io"}:
          .: {}
          f:admissionReviewVersions: {}
          f:clientConfig:
            .: {}
            f:service:
              .: {}
              f:name: {}
              f:namespace: {}
              f:path: {}
              f:port: {}
          f:failurePolicy: {}
          f:matchPolicy: {}
          f:name: {}
          f:namespaceSelector: {}
          f:objectSelector: {}
          f:rules: {}
          f:sideEffects: {}
          f:timeoutSeconds: {}
    manager: Go-http-client
    operation: Update
    time: "2021-03-10T07:06:19Z"
  - apiVersion: admissionregistration.k8s.io/v1beta1
    fieldsType: FieldsV1
    fieldsV1:
      f:webhooks:
        k:{"name":"validate.nginx.ingress.kubernetes.io"}:
          f:namespaceSelector:
            f:matchExpressions: {}
    manager: admissionsenforcer
    operation: Update
    time: "2021-03-10T07:06:19Z"
  - apiVersion: admissionregistration.k8s.io/v1beta1
    fieldsType: FieldsV1
    fieldsV1:
      f:webhooks:
        k:{"name":"validate.nginx.ingress.kubernetes.io"}:
          f:clientConfig:
            f:caBundle: {}
    manager: kube-webhook-certgen
    operation: Update
    time: "2021-03-10T07:06:23Z"
  name: nginx-ingress-ingress-nginx-admission
webhooks:
- admissionReviewVersions:
  - v1
  - v1beta1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUJkVENDQVJ5Z0F3SUJBZ0lSQVBuNEN0QUlYTjE5TldxUGZwTXVRd0F3Q2dZSUtvWkl6ajBFQXdJd0R6RU4KTUFzR0ExVUVDaE1FYm1sc01UQWdGdzB5TVRBek1UQXdOekF4TVRoYUdBOHlNVEl4TURJeE5EQTNNREV4T0ZvdwpEekVOTUFzR0ExVUVDaE1FYm1sc01UQlpNQk1HQnlxR1NNNDlBZ0VHQ0NxR1NNNDlBd0VIQTBJQUJLWGdjR1lUCkt4WkcwSnNpUmlEQTBtZ2IxckthZ2d2ajFScFMwYS84M3l5TmdyMzYrV3AvYlFSWHFaMUFBTFBjN2d6alRBSmkKK3k1UGgycExyRmttZWN1alZ6QlZNQTRHQTFVZER3RUIvd1FFQXdJQ0JEQVRCZ05WSFNVRUREQUtCZ2dyQmdFRgpCUWNEQVRBUEJnTl [...]
    service:
      name: nginx-ingress-ingress-nginx-controller-admission
      namespace: ingress-basic
      path: /networking/v1beta1/ingresses
      port: 443
  failurePolicy: Fail
  matchPolicy: Equivalent
  name: validate.nginx.ingress.kubernetes.io
  namespaceSelector:
    matchExpressions:
    - key: control-plane
      operator: DoesNotExist
  objectSelector: {}
  rules:
  - apiGroups:
    - networking.k8s.io
    apiVersions:
    - v1beta1
    operations:
    - CREATE
    - UPDATE
    resources:
    - ingresses
    scope: '*'
  sideEffects: None
  timeoutSeconds: 10
